--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ cache:
 
 env:
     - LINUX_SRC=linux
-    - PLATFORMIO_CI_SRC=features/Radio PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
-    - PLATFORMIO_CI_SRC=features/Profile PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
-    - PLATFORMIO_CI_SRC=features/ PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
+    #- PLATFORMIO_CI_SRC=features/Radio PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
+    #- PLATFORMIO_CI_SRC=features/Profile PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
+    - PLATFORMIO_CI_SRC=features PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
 
 install:
     - pip install -U platformio
