--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,14 @@ cache:
 
 env:
     - LINUX_SRC=linux
-    #- PLATFORMIO_CI_SRC=features/Radio PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
-    #- PLATFORMIO_CI_SRC=features/Profile PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
-    - PLATFORMIO_CI_SRC=features PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
+    - PLATFORMIO_CI_SRC=features/radio PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
+    - PLATFORMIO_CI_SRC=features/profile PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
+    #- PLATFORMIO_CI_SRC=features PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
 
 install:
     - pip install -U platformio
     - platformio update
     - platformio lib -g install https://github.com/adafruit/RadioHead.git
 
-script:
-    - platformio ci --lib="." --board=esp32dev
-    - make travis-build
+script: make travis-build
+    #- platformio ci --lib="." --board=esp32dev
