--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,12 @@ cache:
 
 env:
     - LINUX_SRC=linux
-    - PLATFORMIO_CI_SRC=features/Radio/radio # PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
-    - PLATFORMIO_CI_SRC=features/Profile/profile # PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
-    #- PLATFORMIO_CI_SRC=features PLATFORMIO_CI_EXTRA_ARGS="--board=--board=esp32dev"
+    - PLATFORMIO_CI_SRC=features/Radio/radio
+    - PLATFORMIO_CI_SRC=features/Profile/profile
 
 install:
     - pip install -U platformio
     - platformio update
-    - platformio lib -g install https://github.com/adafruit/RadioHead.git
 
 script:
   - platformio ci features/ --board=esp32dev --lib="."
