--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # ignore build files
 *.o
 *.exe
+a.out
 
 # ignore pio files
 .pioenvs
@@ -9,4 +10,6 @@
 # ignore ide files
 .clang_complete
 .gcc-flags.json
+.vs
+.vscode
 
