--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,9 @@ cache:
     directories:
         - "~/.platformio"
 
-env:
-    - LINUX_SRC=linux
-    - PLATFORMIO_CI_SRC=features/Radio/radio
-    - PLATFORMIO_CI_SRC=features/Profile/profile
-
 install:
     - pip install -U platformio
     - platformio update
 
 script:
-  - platformio ci features/ --board=esp32dev --lib="."
+  - platformio run -s
