added new structure for communication

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,9 +1,5 @@
 set(EAPlib_sources
-  ${CMAKE_CURRENT_SOURCE_DIR}/utilities/schedule.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/profile/basal/helper.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/profile/basal/basal.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/radio/radio.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/validation/crc.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/communication/raw/validation/crc.cpp
   )
 
 # needed to use strptime
