--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,8 @@ enable_testing()
 set(TEST_DIR ${PROJECT_SOURCE_DIR}/test)
 set(TEST_SRC_FILES
   ${TEST_DIR}/test_crc.cpp
-  ${TEST_DIR}/test_basal.cpp
+  # ${TEST_DIR}/test_basal.cpp
+  # ${TEST_DIR}/test_targets.cpp
   )
 
 foreach(_test_file ${TEST_SRC_FILES})
