--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(EAPlib_sources
   ${CMAKE_CURRENT_SOURCE_DIR}/communication/raw/validation/crc.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/communication/raw/request_packet.cpp
   )
 
 # needed to use strptime
